--- a/styles/form.css
+++ b/styles/form.css
@@ -10,7 +10,7 @@
     grid-template-rows: auto auto auto 1fr auto; /* 4 filas*/
     grid-template-columns: 3fr 1fr;
 
-    gap: 10px; /* espacio de separación */
+    gap: 10px;
 
   /* DIBUJAR LAS AREAS */
     grid-template-areas: 
@@ -23,17 +23,6 @@
 
     
 }
-
-/* .item-2, .item-3, .item-4, .item-5{
-    padding-right: 8px;
-    padding-left: 8px;
-    background-color: white;
-    border: 4px solid tomato;
-    border-radius: 6px;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
-    font-size: 12px;
-} */
-
 
 
 /* ================ CSS para Formulario ====================*/
